# harness

./: .gitignore  AGENTS.md  ARQUITETURA_HARNESS.txt  HERMES_CHECKLIST.md  Hermes_SOUL.md  harness_cli.py  harness_daemon.py  pyproject.toml  start_cockpit.sh  test_delegation.py
agente-toolkit/: README.md  check_system.py
agents/: lead_backend.py  lead_data.py  lead_devops.py  lead_frontend.py  lead_qa_auditor.py  lead_security.py  lead_sre.py  worker_react.py  worker_react_tailwind.py  worker_sqlite.py  worker_uiux_premium.py
bridge/: auto_genesis.py  deploy_mission.py  harness_mission_factory.py  skill_template.py
core/: engine.py  engineering.py  event_bus.py  llm.py  mcp_server.py  middleware.py  orchestrator_tools.py  parser.py  store.py  tools_def.py  worker.py
core/policies/: guardrails.py
core/ui/: dashboard.py  ledger.py
data/workers/api-specialist/: README.md  prompt.txt  worker.yaml
tests/: test_engine.py  test_foundation.py  test_interface.py  test_shield.py  test_workers.py
workflows/: ghost_verify.json  mock_workflow.yaml  sabotage_test.json
